# TS_XHEC_TP

./: .gitignore  XHEC - TP1 - Exercices.ipynb  XHEC - TP2 - Exercices.ipynb  XHEC - TP3 - Exercices.ipynb  XHEC-REPORT-GROUP00.docx  XHEC-REPORT-GROUP06.docx  pyproject.toml  requirements.txt  rnn_model.pt
